--- a/public/styles.css
+++ b/public/styles.css
@@ -31173,6 +31173,52 @@ video {
           animation: bounce 1s infinite;
 }
 
+.first{
+  --tw-bg-opacity: 1;
+  background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+  border-radius: 0.5rem;
+  font-family: Londrina Solid;
+  height: 10rem;
+  margin: 0.5rem;
+  padding: 1rem;
+  width: 10rem
+}
+
+.second{
+  --tw-bg-opacity: 1;
+  background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+  border-radius: 0.5rem;
+  font-family: Londrina Solid;
+  height: 10rem;
+  margin: 0.5rem;
+  padding: 1rem;
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 10rem
+}
+
+.third{
+  --tw-bg-opacity: 1;
+  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+  border-radius: 0.5rem;
+  font-family: Londrina Solid;
+  height: 10rem;
+  margin: 0.5rem;
+  padding: 1rem;
+  width: 10rem
+}
+
+.fourth{
+  --tw-bg-opacity: 1;
+  background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
+  border-radius: 0.5rem;
+  font-family: Londrina Solid;
+  height: 10rem;
+  margin: 0.5rem;
+  padding: 1rem;
+  width: 10rem
+}
+
 @media (min-width: 640px){
   .sm\:container{
     width: 100%;
