--- a/src/styles.css
+++ b/src/styles.css
@@ -5,17 +5,23 @@
 @tailwind utilities;
 
 .first{
-    @apply rounded-lg font-londrina bg-red-400 h-40 w-40 p-4 m-2
+    @apply rounded-lg font-londrina bg-red-400 h-40 w-40 p-4 m-2;
 }
 
 .second{
-    @apply shadow-lg rounded-lg font-londrina bg-blue-400 h-40 w-40 p-4 m-2
+    @apply shadow-lg rounded-lg font-londrina bg-blue-400 h-40 w-40 p-4 m-2;
 }
 
 .third{
-    @apply rounded-lg font-londrina bg-green-400 h-40 w-40 p-4 m-2
+    @apply rounded-lg font-londrina bg-green-400 h-40 w-40 p-4 m-2;
 }
 
 .fourth{
-    @apply rounded-lg font-londrina bg-purple-400 h-40 w-40 p-4 m-2
+    @apply rounded-lg font-londrina bg-purple-400 h-40 w-40 p-4 m-2;
 }
+
+.special{
+    @apply h-20 w-20 ml-10 bg-red-400 text-black  transition ease-in-out duration-100 hover:bg-red-700 transform hover:scale-150;
+}
+
+
